tests/invalid/type_alias_generic_args_not_supported.wio
type Score = i32;

fn Entry() -> i32 {
    let value: Score<i32> = 7;
    return 0;
}
